// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input: Component should render correctly 1`] = `
<Component>
  <InputComponent
    customStyles={Object {}}
  >
    <input
      style={
        Object {
          "backgroundColor": "transparent",
          "border": "none",
          "color": "#FFF",
          "fontSize": "18px",
          "lineHeight": "24px",
          "outline": "none",
        }
      }
    />
  </InputComponent>
</Component>
`;

exports[`Input: Component should render with custom styles 1`] = `
<Component
  customStyles={
    Object {
      "color": "blue",
    }
  }
>
  <InputComponent
    customStyles={
      Object {
        "color": "blue",
      }
    }
  >
    <input
      style={
        Object {
          "backgroundColor": "transparent",
          "border": "none",
          "color": "blue",
          "fontSize": "18px",
          "lineHeight": "24px",
          "outline": "none",
        }
      }
    />
  </InputComponent>
</Component>
`;
